# omnidirectional-robot-supervision_and_control

./: .gitignore  README.md
ros_gui/: CMakeLists.txt  package.xml
ros_gui/include/ros_gui/: controller.hpp  field.hpp  field_window.hpp  log_window.hpp  main_window.hpp  moc_field.cxx_parameters  moc_field_window.cxx  moc_field_window.cxx_parameters  moc_log_window.cxx  moc_log_window.cxx_parameters  moc_main_window.cxx  moc_main_window.cxx_parameters  moc_qnode.cxx  moc_qnode.cxx_parameters  moc_serial_listener.cxx  moc_serial_listener.cxx_parameters  moc_serial_port.cxx_parameters  moc_settings_window.cxx  moc_settings_window.cxx_parameters  qnode.hpp  serialCommunication.hpp  serial_port.hpp  settings_window.hpp
ros_gui/msg/: RX_data.msg
ros_gui/src/: controller.cpp  field.cpp  field_window.cpp  log_window.cpp  main_window.cpp  qnode.cpp  serialCommunication.cpp  serial_port.cpp  settings_window.cpp
ros_gui/ui/: field_window.ui  log_window.ui  main_window.ui  settings_window.ui
