<?xml version="1.0"?>
<package>
  <name>ros_gui</name>
  <version>0.1.0</version>
  <description>

     ros_gui

  </description>
  <maintainer email="cfarias.rafael@gmail.com">Rafael Farias</maintainer>
  <author>Rafael Farias</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>libqt4-dev</build_depend>
  
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

 
</package>
